k8s/DotnetMSAPatterns.API/deploymentClient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetmsapatternsuiserverside
spec:
  selector:
    matchLabels:
      app: dotnetmsapatternsuiserverside
  replicas: 1
  template:
    metadata:
      labels:
        app: dotnetmsapatternsuiserverside
    spec:
      containers:
      - name: dotnetmsapatternsuiserverside
        image: karoldeland/dotnetmsapatternsuiserverside:1.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
