k8s/DotnetMSAPatterns.API/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetmsapatternsapi
spec:
  selector:
    app: dotnetmsapatternsapi
  ports:
  - name: http
    port: 80
    targetPort: 80
