k8s/DotnetMSAPatterns.API/serviceClient.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetmsapatternsuiserverside
spec:
  selector:
    app: dotnetmsapatternsuiserverside
  ports:
  - port: 80
    targetPort: 80
