k8s/DotnetMSAPatterns.API/virtualServiceClient.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dotnetmsapatternsuiserverside
spec:
  hosts:
  - "*"
  gateways:
  - dotnetmsapatternsapi-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: dotnetmsapatternsuiserverside.istio-atqc19.svc.cluster.local
        port:
          number: 80
