k8s/DotnetMSAPatterns.API/virtualServiceNoRetry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dotnetmsapatternsapi
spec:
  hosts:
  - dotnetmsapatternsapi
  http:
  - match:
      - port: 80
    route:
    - destination:
        host: dotnetmsapatternsapi
        port:
          number: 80
